# simple_annotator

./: .gitignore  README.md  pyproject.toml
simple_annotator/: annotation.py  config.py  main.py  mask.py  segmentation.py  ui.py
