[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-annotator"
version = "0.1.0"
description = "A lightweight tool for segmentation-based image mask annotation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.8",
    "matplotlib>=3.9",
    "scikit-image>=0.24",
    "numpy>=2.1",
    "pillow>=10.4",
    "platformdirs>=4.2",
]

[project.scripts]
simple-annotator = "simple_annotator.main:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["simple_annotator"]

[tool.ruff]
line-length = 100
target-version = "py312"
